--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -5,23 +5,23 @@
       <div class="col-12 center form-group">{{ 'user.info' | translate }}</div>
       <label for="deliveryCountry" class="col-12">{{ 'user.deliveryCountry' | translate }}</label>
       <div class="col-12 center form-group">
-        <input type="text" [(ngModel)]="deliveryCountry" class="form-control" id="deliveryCountry" name="deliveryCountry" disabled required>
+        <input type="text" [(ngModel)]="sharedService.deliveryCountry" class="form-control" id="deliveryCountry" name="deliveryCountry" disabled required>
         <div class="input-group-btn dropdown-attr">
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split dropdown-button-white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right scrollable-menu">
-            <a *ngFor="let country of countries" class="dropdown-item" href="#" (click)="changeActiveCountry(country)">{{country}}</a>
+            <a *ngFor="let country of sharedService.wareHouses" class="dropdown-item" (click)="changeActiveCountry(country)">{{country}}</a>
           </div>
         </div>
       </div>
       <label for="recipient" class="col-12">{{ 'user.recipient' | translate }}</label>
       <div class="col-12 center form-group">
-        <input type="text" [(ngModel)]="recipient" class="form-control" id="recipient" name="recipient" [ngbTypeahead]="search" required [disabled]="deliveryCountry.length === 0">
+        <input type="text" [(ngModel)]="recipient" class="form-control" id="recipient" name="recipient" [ngbTypeahead]="search" required [disabled]="sharedService.deliveryCountry.length === 0">
         <div class="input-group-btn dropdown-attr">
           <button type="button" class="selection-button btn btn-secondary dropdown-toggle dropdown-toggle-split dropdown-button-white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           </button>
           <div class="dropdown-menu dropdown-menu-right scrollable-menu">
-            <a *ngFor="let company of filteredCompanies;let indx = index" class="dropdown-item" href="#" (click)="changeActiveCompany(company.id)">{{company.name}}</a>
+            <a *ngFor="let company of filteredCompanies;let indx = index" class="dropdown-item" (click)="changeActiveCompany(company.id)">{{company.name}}</a>
           </div>
         </div>
       </div>
