--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="row language">
-  <div class="col-12">
+  <div class="col-sm-12">
     <div class="dropdown d-flex justify-content-end align-items-center">
       <a id="dropdownLanguage" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{sharedService.lang.countryLetters}}
@@ -12,15 +12,14 @@
   </div>
 </div>
 
-<div class="row header">
-  <div class="col-3 no-padding header-margin">
-    <a class="logo-pos" href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png" height="80px">
+<div class="row header white">
+  <div class="logo col-md-3">
+    <a class="header-logo" href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png">
     </a>
-    <canvas class="canvas-attr" id="myCanvas" width="175" height="80">
-    </canvas>
   </div>
-  <div class="col-9 omniva-red-background d-flex justify-content-end align-items-center white row">
-      <h3 class="header-attr">{{ title | translate }}</h3>
+  <div class="title-column col-sm-12 col-md-9 omniva-red-background d-flex justify-content-end align-items-center row">
+    <span class="rectangle"></span>
+    <h3 class="header-title">{{ title | translate }}</h3>
     <i class="fa fa-bars fa-2x" id="dropdownAdmin" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownAdmin">
       <a class="dropdown-item" [hidden]="sharedService.loggedIn" (click)="openLogin()"><b>{{ 'admin.title' | translate }}</b></a>
