--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,7 +1,6 @@
-<div class="row">
-    <div class="col-4"></div>
-    <div class="col-4">
-      <form name="return-form" class="padding-from-header col-12" (submit)="validate()">
+<div class="row justify-content-center">
+    <div class="col-xl-4 col-l-5 col-md-6 col-sm-7 col-11">
+      <form name="return-form" class="padding-from-header" (submit)="validate()">
         <div class="center form-group">{{ 'user.info' | translate }}</div>
 
         <div class="form-group">
@@ -52,5 +51,4 @@
         </div>
       </form>
     </div>
-    <div class="col-4"></div>
   </div>
