--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-xl-4 col-l-5 col-md-6 col-sm-7 col-11">
       <form name="return-form" class="padding-from-header" (submit)="validate()">
-        <div class="center form-group">{{ 'user.info' | translate }}</div>
+        <div class="center form-group justify-text">{{ 'user.info' | translate }}</div>
 
         <div class="form-group">
           <label for="deliveryCountry">{{ 'user.deliveryCountry' | translate }}</label>
