--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -33,17 +33,17 @@
 
         <div class="form-group">
           <label for="name">{{ 'user.name' | translate }}</label>
-          <input type="text" [(ngModel)]="name" class="form-control" id="name" name="name" required>
+          <input type="text" [(ngModel)]="sharedService.formInfo.name" class="form-control" id="name" name="name" required>
         </div>
 
         <div class="form-group">
           <label for="mobile">{{ 'user.mobile' | translate }}</label>
-          <input type="tel" [(ngModel)]="mobile" class="form-control " id="mobile" name="mobile" required>
+          <input type="tel" [(ngModel)]="sharedService.formInfo.mobile" class="form-control " id="mobile" name="mobile" required>
         </div>
 
         <div class="form-group">
           <label for="email">{{ 'user.email' | translate }}</label>
-          <input type="email" [(ngModel)]="email" class="form-control" id="email" name="email" required>
+          <input type="email" [(ngModel)]="sharedService.formInfo.email" class="form-control" id="email" name="email" required>
         </div>
 
         <div class="form-group">
