--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -11,9 +11,7 @@
         <label for="password" class="col-12">{{ 'login.password' | translate }}
           <input type="password" [(ngModel)]="sharedService.password" class="form-control" id="password" name="password" required autocomplete="off"></label>
       </div>
-      <div class="modal-footer row justify-content-center">
-        <div class="col-6">
-          <button type="submit" class="btn btn-lg col-12 omniva-red-background no-border white">{{ 'login.button' | translate }}</button>
-        </div>
+      <div class="modal-footer center">
+          <button type="submit" class="btn btn-lg col-6 omniva-red-background no-border white">{{ 'login.button' | translate }}</button>
       </div>
 </form>
