--- a/src/app/client/view/client-view.component.html
+++ b/src/app/client/view/client-view.component.html
@@ -29,7 +29,10 @@
     </div>
   </form>
 </div>
-<div class="col-12">
+<div *ngIf="clientService.filteredClients.length === 0" class="col-12">
+  <h3>{{ 'admin.table.noClientsFound' | translate }}</h3>
+</div>
+<div *ngIf="clientService.filteredClients.length > 0" class="col-12">
   <table class="table">
     <thead>
     <tr>
