--- a/src/app/user-form/success/success.component.html
+++ b/src/app/user-form/success/success.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center form-padding">
   <div class="col-xl-4 col-l-5 col-md-6 col-sm-7 col-11">
       <div class="col-12 center form-group justify-text">{{ 'success.info' | translate }}</div>
       <div class="col-12 center form-group">
