--- a/src/app/client/confirm-dialog/confirm.dialog.component.html
+++ b/src/app/client/confirm-dialog/confirm.dialog.component.html
@@ -9,14 +9,9 @@
       <h5>{{ message }}</h5>
     </div>
     <div class="modal-footer">
-      <div class="col-6"></div>
-      <div class="col-6 row">
-        <div class="col-6">
-          <button type="button" (click)="cancel()" class="btn btn-lg omniva-red-background no-border white center-text">{{ 'dialog.option.decline' | translate }}</button>
-        </div>
-        <div class="col-6">
-          <button type="submit" class="btn btn-lg omniva-red-background no-border white center-text">{{ 'dialog.option.accept' | translate }}</button>
-        </div>
+      <div class="row">
+          <button type="button" (click)="cancel()" class="btn btn-lg omniva-red-background no-border white center-text confirm-button">{{ 'dialog.option.decline' | translate }}</button>
+          <button type="submit" class="btn btn-lg omniva-red-background no-border white center-text confirm-button">{{ 'dialog.option.accept' | translate }}</button>
       </div>
     </div>
  </form>
