--- a/src/app/client/view/client-view.component.html
+++ b/src/app/client/view/client-view.component.html
@@ -29,10 +29,7 @@
     </div>
   </form>
 </div>
-<div *ngIf="clientService.filteredClients.length === 0" class="col-12">
-  <h3>{{ 'admin.table.noClientsFound' | translate }}</h3>
-</div>
-<div *ngIf="clientService.filteredClients.length > 0" class="col-12">
+<div>
   <table class="table">
     <thead>
     <tr>
@@ -63,4 +60,7 @@
     </tr>
     </tbody>
   </table>
+  <div *ngIf="clientService.filteredClients.length === 0" class="col-12">
+    <h3>{{ 'admin.table.noClientsFound' | translate }}</h3>
+  </div>
 </div>
