#87 small changes in css for filter remove button and empty response text

--- a/src/app/client/client.css
+++ b/src/app/client/client.css
@@ -18,6 +18,15 @@
 
 .empty-filters {
   margin: auto;
+  font-size: 2em;
+  color: #FF6319;
+  cursor: pointer;
+}
+
+.no-clients-found {
+  text-align: center;
+  margin-top: 70px;
+  color: #FF6319;
 }
 
 .center-text {
