--- a/src/app/client/view/client-view.component.html
+++ b/src/app/client/view/client-view.component.html
@@ -61,6 +61,6 @@
     </tbody>
   </table>
   <div *ngIf="clientService.filteredClients.length === 0" class="col-12">
-    <h3>{{ 'admin.table.noClientsFound' | translate }}</h3>
+    <h3 class="no-clients-found">{{ 'admin.table.noClientsFound' | translate }}</h3>
   </div>
 </div>
