--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,8 +14,8 @@
 
 <div class="row header white">
   <div class="logo col-md-3">
-    <a class="header-logo" href="/"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png">
-    </a>
+    <div class="header-logo" (click)="logout()"><img src="../../../assets/images/logo_omniva_large.png" alt="https://www.omniva.ee/public/banners/pood/logo_717x696.png">
+    </div>
   </div>
   <div class="title-column col-sm-12 col-md-9 omniva-red-background d-flex justify-content-end align-items-center row">
     <span class="rectangle"></span>
